--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>icepicket.com</h1>
 <p>I'm some kid on the internet. This is my website.</p>
+<a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
