--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>icepicket.com</h1>
 <p>I'm some kid on the internet. This is my website.</p>
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
+<a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
