--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>icepicket.com</h1>
 <p>I'm some kid on the internet. This is my website.</p>
+<h2>social media</h2>
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
+<br>
 <a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
+<h2>projects</h2>
+<p>one day i will put something here</p>
