--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
 <a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
+<br>
+<a href="whatsapp.com/channels/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
 <h2>projects</h2>
 <p>one day i will put something here</p>
