--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <br>
 <a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
-<a href="whatsapp.com/channels/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
+<a href="https://whatsapp.com/channels/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
 <h2>projects</h2>
 <p>one day i will put something here</p>
