--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,3 @@
-<a href="index" target=_self ><< back</a>
+<a href="index.html" target=_self ><< back</a>
 <h2>projects</h2>
 <p>one day i will put something here</p>
