--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1>icepicket.com</h1>
 <p>I'm some kid on the internet. This is my website.</p>
+<br>
+<a href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
 <h2>socials</h2>
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
