--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <p>I'm some kid on the internet. This is my website.</p>
 <br>
 <a href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
+<br>
+<a href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
 <h2>socials</h2>
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
