--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>icepicket.com</h1>
 <p>I'm some kid on the internet. This is my website.</p>
 <br>
+<h2>stuff on this site</h2>
 <a href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
 <br>
 <a href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
