--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,19 @@
 <a href="index.html" target=_self ><< back</a>
 <h2>About me</h2>
-<p>note to self: write this</p>
+<p>pronouns: he/him</p>
+<br>
+<p>age: -2</p>
+<br>
+<p>species: human</p>
+<h3>what i like</h3>
+<ul>
+  <li>food</li>
+  <li>sleepovers</li>
+  <li>coding maybe</li>
+</ul>
+<h3>what i don't like</h3>
+<ul>
+  <li>ai</li>
+  <li>eating with your mouth open</li>
+  <li>existensial crisis</li>
+</ul>
