--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <p>species: human</p>
 <h3>what i like</h3>
 <ul>
-  <li>food</li>
+  <li>salty licorice</li>
   <li>sleepovers</li>
   <li>coding maybe</li>
 </ul>
