--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
 <br>
 <a href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
 <h2>projects</h2>
-<p>one day i will put something here</p>
+<a href="projects/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
+<p>one day i will put something cooler here</p>
