--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
 <a href="index.html" target=_self ><< back</a>
 <h2>projects</h2>
-<p>one day i will put something here</p>
+<a href="projects/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
+<p>one day i will put something cooler here</p>
