--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-<a href="index.html" target=_self ><< back</a>
+<a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>About me</h2>
 <p>pronouns: he/him</p>
 <br>
