--- a/namelore.html
+++ b/namelore.html
@@ -1,4 +1,4 @@
-<a href="index.html" target=_self ><< back</a>
+<a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>The lore of the name "icepicket"</h2>
 <p>When Geometry Dash 2.2 came out, so called "lobtomy levels" got popular. My username was shitty so I wanted a new one. So I started thinking. I knew what a lobotomy was:
  Shoving an ice picket into someone's skull to somehow cure mental illnesses. Then it hit me. "icepicket" is a good name. I'm gonna use that!
