--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<a href="index.html" target=_self ><< back</a>
+<a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>projects</h2>
 <a href="projects/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
 <p>one day i will put something cooler here</p>
