--- a/socials.html
+++ b/socials.html
@@ -1,4 +1,4 @@
-<a href="index.html" target=_self ><< back</a>
+<a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>socials</h2>
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
