--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <h1><b>404</b></h1>
 <p>This page does not exist.</p>
 <br>
-<a href="index.html" target="_self" title="main page">main page</a>
+<a href="https://icepicket.com/" target="_self" title="main page">main page</a>
