--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<title>icepicket.com - Projects</title>
 <a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>projects</h2>
 <a href="projects/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
