--- a/socials.html
+++ b/socials.html
@@ -1,3 +1,4 @@
+<title>icepicket.com - Socials</title>
 <a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>socials</h2>
 <a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
