--- a/namelore.html
+++ b/namelore.html
@@ -1,3 +1,4 @@
+<title>icepicket.com - Lore of the name</title>
 <a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>The lore of the name "icepicket"</h2>
 <p>When Geometry Dash 2.2 came out, so called "lobtomy levels" got popular. My username was shitty so I wanted a new one. So I started thinking. I knew what a lobotomy was:
