--- a/aboutme.html
+++ b/aboutme.html
@@ -1,3 +1,4 @@
+<title>icepicket.com - About me/Bio</title>
 <a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>About me</h2>
 <p>pronouns: he/him</p>
