--- a/project/spacebarholdingsimulator.html
+++ b/project/spacebarholdingsimulator.html
@@ -1,3 +1,6 @@
 <a href="https://icepicket.com/projects" target=_self ><< back</a>
 <h2>spacebar holding simulator <a href="spacebar_holding_simulator.zip" download><b>download</b></a></h2>
 <p>it's an epic game i made in 1 day</p>
+<p>i don't even know how to compile it so you're gonna have to install python</p>
+<h3>screenshots</h3>
+<img src="preview.png">
