--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1><u><em>icepicket.com</em></u></h1>
+<h1><u>icepicket.com</u></h1>
 <p>I'm some kid on the internet. This is my website.</p>
 <h2>stuff on this site</h2>
 <a href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
