--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 <a href="https://icepicket.com/" target=_self ><< back</a>
 <h2>About me</h2>
 <p>pronouns: he/him</p>
+<p>legal birthname: Huebert Pringleton Dingleberry</p>
 <p>age: -2</p>
 <p>species: human</p>
 <p>country: finland</p>
