--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,7 @@
 <h3>what i don't like</h3>
 <ul>
   <li>ai</li>
+  <li>tiktok/shorts/reels etc
   <li>eating with your mouth open</li>
   <li>existensial crisis</li>
 </ul>
