--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <br>
 <a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
+<a href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
+<br>
 <a href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
 <h2>projects</h2>
 <a href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
