--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<style>
+  h1 {
+    backround-color: #11;
+  }
+</style>
 <h1><u>icepicket.com</u></h1>
 <p>I'm some kid on the internet. This is my website.</p>
 <h2>stuff on this site</h2>
