--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+<link rel=stylesheet href="styles.css">
+</head>
+<body>
 <h1><u>icepicket.com</u></h1>
 <p>I'm some kid on the internet. This is my website.</p>
 <h2>stuff on this site</h2>
@@ -15,3 +20,5 @@
 <h2>projects</h2>
 <a href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
 <p>one day i will put something cooler here</p>
+</body>
+</html>
