--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel=stylesheet type="text/css" href="https://icepicket.com/styles.css">
+<link rel=stylesheet type="text/css" href="https://icepicket.com/style.css">
 </head>
 <body>
 <h1><u>icepicket.com</u></h1>
