--- a/project/spacebarholdingsimulator.html
+++ b/project/spacebarholdingsimulator.html
@@ -1,6 +1,6 @@
 <title>icepicket.com - spacebar holding simulator</title>
 <a href="https://icepicket.com/projects" target=_self ><< back</a>
-<h2>spacebar holding simulator - <a style="color:green; font-size:125%; background-color:dark-green;" href="spacebar_holding_simulator.zip" download><b>download</b></a></h2>
+<h2>spacebar holding simulator - <a style="color:green; font-size:125%; background-color:darkgreen;" href="spacebar_holding_simulator.zip" download><b>download</b></a></h2>
 <p>it's an epic game i made in 1 day</p>
 <p>i don't even know how to compile it so you're gonna have to install python</p>
 <h3>screenshots</h3>
