--- a/project/spacebarholdingsimulator.html
+++ b/project/spacebarholdingsimulator.html
@@ -1,6 +1,6 @@
 <title>icepicket.com - spacebar holding simulator</title>
 <div style="background-color:black;">
-<a href="https://icepicket.com/projects" target=_self ><< back</a>
+<a style="color:blue;" href="https://icepicket.com/projects" target=_self ><< back</a>
 <h2 style="color:white;">spacebar holding simulator - <a style="color:white; font-size:125%; background-color:green;" href="spacebar_holding_simulator.zip" download><b>download</b></a></h2>
 <p style="color:white;">it's an epic game i made in 1 day</p>
 <p style="color:white;">i don't even know how to compile it so you're gonna have to install python</p>
