--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<h1><u>icepicket.com</u></h1>
-<p>I'm some kid on the internet. This is my website.</p>
-<h2>stuff on this site</h2>
-<a href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
+<div style="background-color:black;">
+<h1 style="color:white;"><u>icepicket.com</u></h1>
+<p style="color:white;">I'm some kid on the internet. This is my website.</p>
+<h2 style="color:white;">stuff on this site</h2>
+<a style="color:blue;" href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
 <br>
-<a href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
-<h2>socials</h2>
-<a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
+<a style="color:blue;" href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
+<h2 style="color:white;">socials</h2>
+<a style="color:red;" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
-<a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
+<a style="color:blue;" href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
-<a href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
+<a style="color:orange;" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
 <br>
-<a href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
-<h2>projects</h2>
-<a href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
-<p>one day i will put something cooler here</p>
+<a style="color:green;" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
+<h2 style="color:white;">projects</h2>
+<a style="color:blue;" href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
+<p style="color:white;">one day i will put something cooler here</p>
+</div>
