--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
 <title>icepicket.com - 404</title>
-<h1><b>404</b></h1>
-<p>This page does not exist.</p>
+<div style="background-color:black;">
+<h1 style="color:white;"><b>404</b></h1>
+<p style="color:white;">This page does not exist.</p>
 <br>
-<a href="https://icepicket.com/" target="_self" title="main page">main page</a>
+<a style="color:blue;" href="https://icepicket.com/" target="_self" title="main page">main page</a>
+</div>
