--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <a style="color:blue;" href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
 <br>
 <a style="color:blue;" href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
+<br>
+<a style="color:blue;" href="why" target=_self title="find out here">why is the website ugly?</a>
 <h2 style="color:white;">socials</h2>
 <a style="color:red;" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
