--- a/why.html
+++ b/why.html
@@ -1,4 +1,5 @@
 <div style="background-color:black;">
+  <a href="https://icepicket.com/" target=_self ><< back</a>
   <p style="color:white;">reason 1: i like simplicity</p>
   <p style="color:white;">reason 2: (the actual reason) i'm bad at html and css</p>
 </div>
