--- a/why.html
+++ b/why.html
@@ -1,3 +1,4 @@
+<title>icepicket.com - why is the website ugly?</title>
 <div style="background-color:black;">
   <a href="https://icepicket.com/" target=_self ><< back</a>
   <p style="color:white;">reason 1: i like simplicity</p>
