--- a/aboutme.html
+++ b/aboutme.html
@@ -1,21 +1,23 @@
 <title>icepicket.com - About me/Bio</title>
-<a href="https://icepicket.com/" target=_self ><< back</a>
-<h2>About me</h2>
-<p>pronouns: he/him</p>
-<p>legal birthname: Huebert Pringleton Dingleberry</p>
-<p>age: -2</p>
-<p>species: human</p>
-<p>country: finland</p>
-<h3>what i like</h3>
-<ul>
-  <li>salty licorice</li>
-  <li>sleepovers</li>
-  <li>coding maybe</li>
+<div style="background-color:black;">
+<a style="color:blue;" href="https://icepicket.com/" target=_self ><< back</a>
+<h2 style="color:white;">About me</h2>
+<p style="color:white;">pronouns: he/him</p>
+<p style="color:white;">legal birthname: Huebert Pringleton Dingleberry</p>
+<p style="color:white;">age: -2</p>
+<p style="color:white;">species: human</p>
+<p style="color:white;">country: finland</p>
+<h3 style="color:white;">what i like</h3>
+<ul style="color:white;">
+  <li style="color:white;">salty licorice</li>
+  <li style="color:white;">sleepovers</li>
+  <li style="color:white;">coding maybe</li>
 </ul>
-<h3>what i don't like</h3>
-<ul>
-  <li>ai</li>
-  <li>tiktok/shorts/reels etc
-  <li>eating with your mouth open</li>
-  <li>existensial crisis</li>
+<h3 style="color:white;">what i don't like</h3>
+<ul style="color:white;">
+  <li style="color:white;">ai</li>
+  <li style="color:white;">tiktok/shorts/reels etc
+  <li style="color:white;">eating with your mouth open</li>
+  <li style="color:white;">existensial crisis</li>
 </ul>
+</div>
