--- a/socials.html
+++ b/socials.html
@@ -1,10 +1,12 @@
 <title>icepicket.com - Socials</title>
-<a href="https://icepicket.com/" target=_self ><< back</a>
-<h2>socials</h2>
-<a href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
+<div style="background-color:black;">
+<a style="color:blue;" href="https://icepicket.com/" target=_self ><< back</a>
+<h2 style="color:white;">socials</h2>
+<a style="color:blue;" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
-<a href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
+<a style="color:blue;" href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
-<a href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
+<a style="color:blue;" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
 <br>
-<a href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
+<a style="color:blue;" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channel??</a>
+</div>
