--- a/secret.html
+++ b/secret.html
@@ -1,2 +1,5 @@
-<h2>secret page</h2>
-<p>might make something here</p>
+<title>icepicket.com - secret page</title>
+<div style="background-color:black;">
+<h2 style="color:white;">secret page</h2>
+<p style="color:white;">might make something here</p>
+</div>
