--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 <br>
 <a style="color:green;" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
 <h2 style="color:white;">projects</h2>
-<a style="color:blue;" href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
+<a style="color:blue;" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
 <p style="color:white;">one day i will put something cooler here</p>
 </div>
