--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div style="background-color:black;">
-<h1 style="color:white;"><u>icepicket.com</u></h1>
+<h1 style="color:white; padding-right:5px"><u>icepicket.com</u></h1>
 <p style="color:white;">I'm some kid on the internet. This is my website.</p>
 <h2 style="color:white;">stuff on this site</h2>
 <a style="color:blue;" href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
@@ -18,4 +18,5 @@
 <h2 style="color:white;">projects</h2>
 <a style="color:blue;" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
 <p style="color:white;">one day i will put something cooler here</p>
+<br>
 </div>
