--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <div style="background-color:black;">
 <h1 style="color:white; padding-left:5px"><u>icepicket.com</u></h1>
-<p style="color:white;">I'm some kid on the internet. This is my website.</p>
-<h2 style="color:white;">stuff on this site</h2>
-<a style="color:blue;" href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
+<p style="color:white; padding-left:5px">I'm some kid on the internet. This is my website.</p>
+<h2 style="color:white padding-left:5px;">stuff on this site</h2>
+<a style="color:blue; padding-left:10px" href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
 <br>
-<a style="color:blue;" href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
+<a style="color:blue; padding-left:10px" href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
 <br>
-<a style="color:blue;" href="why" target=_self title="find out here">why is the website ugly?</a>
-<h2 style="color:white;">socials</h2>
-<a style="color:red;" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
+<a style="color:blue; padding-left:10px" href="why" target=_self title="find out here">why is the website ugly?</a>
+<h2 style="color:white; padding-left:5px">socials</h2>
+<a style="color:red; padding-left:10px" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
-<a style="color:blue;" href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
+<a style="color:blue; padding-left:10px" href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
-<a style="color:orange;" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
+<a style="color:orange; padding-left:10px" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
 <br>
-<a style="color:green;" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
-<h2 style="color:white;">projects</h2>
-<a style="color:blue;" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
-<p style="color:white;">one day i will put something cooler here</p>
+<a style="color:green; padding-left:10px" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
+<h2 style="color:white; padding-left:5px">projects</h2>
+<a style="color:blue; padding-left:10px" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
+<p style="color:white; padding-left:10px">one day i will put something cooler here</p>
 <br>
 </div>
