--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <title>icepicket.com - 404</title>
 <div style="background-color:black;">
-<h1 style="color:white;"><b>404</b></h1>
-<p style="color:white;">This page does not exist.</p>
+<h1 style="color:white; padding-left:5px"><b>404</b></h1>
+<p style="color:white; padding-left:5px">This page does not exist.</p>
 <br>
-<a style="color:blue;" href="https://icepicket.com/" target="_self" title="main page">main page</a>
+<a style="color:blue; padding-left:5px" href="https://icepicket.com/" target="_self" title="main page">main page</a>
 </div>
