--- a/project/spacebarholdingsimulator.html
+++ b/project/spacebarholdingsimulator.html
@@ -1,11 +1,11 @@
 <title>icepicket.com - spacebar holding simulator</title>
 <div style="background-color:black;">
-<a style="color:blue;" href="https://icepicket.com/projects" target=_self ><< back</a>
-<h2 style="color:white;">spacebar holding simulator - <a style="color:white; font-size:125%; background-color:green;" href="spacebar_holding_simulator.zip" download><b>download</b></a></h2>
-<p style="color:white;">it's an epic game i made in 1 day</p>
-<p style="color:white;">i don't even know how to compile it so you're gonna have to install python</p>
-<h3 style="color:white;">trailer</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bnbGposzADg?si=-osOMnmo2yn4gAa5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h3 style="color:white;">screenshots</h3>
-<img src="preview.png">
+<a style="color:blue; padding-left:5px" href="https://icepicket.com/projects" target=_self ><< back</a>
+<h2 style="color:white; padding-left:5px">spacebar holding simulator - <a style="color:white; font-size:125%; background-color:green;" href="spacebar_holding_simulator.zip" download><b>download</b></a></h2>
+<p style="color:white; padding-left:5px">it's an epic game i made in 1 day</p>
+<p style="color:white; padding-left:5px">i don't even know how to compile it so you're gonna have to install python</p>
+<h3 style="color:white; padding-left:5px">trailer</h3>
+<iframe style="padding-left:5px" width="560" height="315" src="https://www.youtube.com/embed/bnbGposzADg?si=-osOMnmo2yn4gAa5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h3 style="color:white; padding-left:5px">screenshots</h3>
+<img src="preview.png" style="padding-left:5px">
 </div>
