--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div style="background-color:black;">
 <h1 style="color:white; padding-left:5px"><u>icepicket.com</u></h1>
 <p style="color:white; padding-left:5px">I'm some kid on the internet. This is my website.</p>
-<h2 style="color:white padding-left:5px;">stuff on this site</h2>
+<h2 style="color:white; padding-left:5px;">stuff on this site</h2>
 <a style="color:blue; padding-left:10px" href="namelore" target=_self title="Lore of the name.">Lore of the name</a>
 <br>
 <a style="color:blue; padding-left:10px" href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
