--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <div style="background-color:black;">
 <title>icepicket.com - Projects</title>
-<a style="color:blue;" href="https://icepicket.com/" target=_self ><< back</a>
-<h2 style="color:white;">projects</h2>
-<a style="color:blue;" href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
-<p style="color:white;">one day i will put something cooler here</p>
+<a style="color:blue; padding-left:5px" href="https://icepicket.com/" target=_self ><< back</a>
+<h2 style="color:white; padding-left:5px">projects</h2>
+<a style="color:blue; padding-left:10px" href="project/spacebarholdingsimulator" target="_self" title="download">spacebar holding simulator</a>
+<p style="color:white; padding-left:10px">one day i will put something cooler here</p>
 </div>
