--- a/namelore.html
+++ b/namelore.html
@@ -1,8 +1,8 @@
 <title>icepicket.com - Lore of the name</title>
 <div style="background-color:black;">
-<a style="color:blue;" href="https://icepicket.com/" target=_self ><< back</a>
-<h2 style="color:white;">The lore of the name "icepicket"</h2>
-<p style="color:white;">When Geometry Dash 2.2 came out, so called "lobtomy levels" got popular. My username was shitty so I wanted a new one. So I started thinking. I knew what a lobotomy was:
+<a style="color:blue; padding-left:5px" href="https://icepicket.com/" target=_self ><< back</a>
+<h2 style="color:white; padding-left:5px">The lore of the name "icepicket"</h2>
+<p style="color:white; padding-left:10px">When Geometry Dash 2.2 came out, so called "lobtomy levels" got popular. My username was shitty so I wanted a new one. So I started thinking. I knew what a lobotomy was:
  Shoving an ice picket into someone's skull to somehow cure mental illnesses. Then it hit me. "icepicket" is a good name. I'm gonna use that!
  It was my GD account's name for a while. Then I stopped playing. I created a YouTube channel and a Discord account with the name "Lihapaskeija". Not going to tell you what
  that means in finnish... Then I realized that english speaking people can't pronounce it, so I brought back my GD name. And then i got the stupid idea to create a website.
