--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <br>
 <a style="color:orange; padding-left:10px" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
 <br>
-<a style="color:green; padding-left:10px" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channels??</a>
+<a style="color:green; padding-left:10px" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channel??</a>
 <h2 style="color:white; padding-left:5px">projects</h2>
 <a style="color:blue; padding-left:10px" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
 <p style="color:white; padding-left:10px">one day i will put something cooler here</p>
