--- a/aboutme.html
+++ b/aboutme.html
@@ -1,23 +1,23 @@
 <title>icepicket.com - About me/Bio</title>
 <div style="background-color:black;">
-<a style="color:blue;" href="https://icepicket.com/" target=_self ><< back</a>
-<h2 style="color:white;">About me</h2>
-<p style="color:white;">pronouns: he/him</p>
-<p style="color:white;">legal birthname: Huebert Pringleton Dingleberry</p>
-<p style="color:white;">age: -2</p>
-<p style="color:white;">species: human</p>
-<p style="color:white;">country: finland</p>
-<h3 style="color:white;">what i like</h3>
-<ul style="color:white;">
-  <li style="color:white;">salty licorice</li>
-  <li style="color:white;">sleepovers</li>
-  <li style="color:white;">coding maybe</li>
+<a style="color:blue; padding-left:5px" href="https://icepicket.com/" target=_self ><< back</a>
+<h2 style="color:white; padding-left:5px">About me</h2>
+<p style="color:white; padding-left:10px">pronouns: he/him</p>
+<p style="color:white; padding-left:10px">legal birthname: Huebert Pringleton Dingleberry</p>
+<p style="color:white; padding-left:10px">age: -2</p>
+<p style="color:white; padding-left:10px">species: human</p>
+<p style="color:white; padding-left:10px">country: finland</p>
+<h3 style="color:white; padding-left:10px">what i like</h3>
+<ul style="color:white; padding-left:10px">
+  <li style="color:white; padding-left:10px">salty licorice</li>
+  <li style="color:white; padding-left:10px">sleepovers</li>
+  <li style="color:white; padding-left:10px">coding maybe</li>
 </ul>
-<h3 style="color:white;">what i don't like</h3>
-<ul style="color:white;">
-  <li style="color:white;">ai</li>
-  <li style="color:white;">tiktok/shorts/reels etc
-  <li style="color:white;">eating with your mouth open</li>
-  <li style="color:white;">existensial crisis</li>
+<h3 style="color:white; padding-left:10px">what i don't like</h3>
+<ul style="color:white; padding-left:10px">
+  <li style="color:white; padding-left:10px">ai</li>
+  <li style="color:white; padding-left:10px">tiktok/shorts/reels etc
+  <li style="color:white; padding-left:10px">eating with your mouth open</li>
+  <li style="color:white; padding-left:10px">existensial crisis</li>
 </ul>
 </div>
