--- a/secret.html
+++ b/secret.html
@@ -1,5 +1,5 @@
 <title>icepicket.com - secret page</title>
 <div style="background-color:black;">
-<h2 style="color:white;">secret page</h2>
-<p style="color:white;">might make something here</p>
+<h2 style="color:white; padding-left:10px">secret page</h2>
+<p style="color:white; padding-left:10px">might make something here</p>
 </div>
