--- a/project/robuxgeneratorreal.html
+++ b/project/robuxgeneratorreal.html
@@ -1,10 +1,10 @@
 <title>icepicket.com - robux generator real 100%</title>
 <div style="background-color:black;">
 <a style="color:blue; padding-left:5px" href="https://icepicket.com/projects" target=_self ><< back</a>
-<h2 style="color:white; padding-left:5px">robux generator REAL 100%!! - <a style="color:white; font-size:125%; background-color:green;" href="robux_generator.bat" download><b>download</b></a></h2>
+<h2 style="color:white; padding-left:5px">robux generator REAL 100%!! - <a style="color:white; font-size:125%; background-color:green;" href="download/robux_generator.bat" download><b>download</b></a></h2>
 <p style="color:white; padding-left:5px">GENERATE HUNDREDS OF ROBUX CODES IN SECONDS!!1</p>
 <p style="color:white; padding-left:5px">just open the file and you get free robux!!!!!!!!!!!!!!!!!!!!!!1!!!!!!!!!11!!!!!!1!!!!!!!1!1!!11!!!</p>
 <h3 style="color:white; padding-left:5px">screenshots</h3>
-<img src="preview.png" style="padding-left:5px">
+<img src="images/robux.jpg" style="padding-left:5px">
 <br>
 </div>
