--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h2 style="color:white; padding-left:5px">projects</h2>
 <a style="color:blue; padding-left:10px" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
 <br>
-<a style="color:blue; padding-left:10px" href="project/robuxgeneratorreal" target="_self" title="REAL 100%!!!!11!">robux generator real 100%</a>
+<a style="color:darkblue; padding-left:10px" href="project/robuxgeneratorreal" target="_self" title="REAL 100%!!!!11!">robux generator real 100%</a>
 <p style="color:white; padding-left:10px">one day i will put something cooler here</p>
 <br>
 </div>
