--- a/socials.html
+++ b/socials.html
@@ -2,12 +2,15 @@
 <div style="background-color:black;">
 <a style="color:blue; padding-left:5px" href="https://icepicket.com/" target=_self ><< back</a>
 <h2 style="color:white; padding-left:5px">socials</h2>
-<a style="color:blue; padding-left:10px" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
+<p style="color:white; padding-left:5px">In some places, i'm still called "lihapaskeija". <a style="color:darkblue;" href="namelore" target="_blank" title="lore of the name">why?</a></p>
+<a style="color:red; padding-left:10px" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
 <a style="color:blue; padding-left:10px" href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
-<a style="color:blue; padding-left:10px" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
+<a style="color:orange; padding-left:10px" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
 <br>
-<a style="color:blue; padding-left:10px" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channel??</a>
+<a style="color:green; padding-left:10px" href="https://whatsapp.com/channel/0029VakjOcRBfxo6KWAVrl3w" target="_blank" title="lol no fucking idea why">whatsapp channel??</a>
+<br>
+<p style="color:yellow; padding-left:10px">geometry dash username: icepicket</p>
 <br>
 </div>
