--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <a style="color:blue; padding-left:10px" href="aboutme" target=_self title="About me/Bio">About me/Bio</a>
 <br>
 <a style="color:blue; padding-left:10px" href="why" target=_self title="find out here">why is the website ugly?</a>
-<h2 style="color:white; padding-left:5px">socials <a style="color:blue; size:50%" href="socials" target=_self>see all</a></h2>
+<h2 style="color:white; padding-left:5px">socials <a style="color:blue; font-size:50%" href="socials" target=_self>see all</a></h2>
 <a style="color:red; padding-left:10px" href="https://youtube.com/@icepicket" target="_blank" title="subscribe">youtube channel</a>
 <br>
 <a style="color:blue; padding-left:10px" href="https://discordapp.com/users/1214994151238795324" target="_blank" title="i (might) respond">discord</a>
 <br>
 <a style="color:orange; padding-left:10px" href="https://reddit.com/u/lihapaskeija" target="_blank" title="idk">reddit</a>
-<h2 style="color:white; padding-left:5px">projects <a style="color:blue; size:50%" href="projects" target=_self>see all</a></h2>
+<h2 style="color:white; padding-left:5px">projects <a style="color:blue; font-size:50%" href="projects" target=_self>see all</a></h2>
 <a style="color:blue; padding-left:10px" href="project/spacebarholdingsimulator" target="_self" title="download here">spacebar holding simulator</a>
 <br><br>
 <a style="color:darkblue; padding-left:10px" href="project/robuxgeneratorreal" target="_self" title="REAL 100%!!!!11!">robux generator real 100%</a>
