--- a/why.html
+++ b/why.html
@@ -1,5 +1,6 @@
 <title>icepicket.com - why is the website ugly?</title>
 <div style="background-color:black;">
+  <h2 style="color:white; padding-left:10px;">why is the website ugly?</h2>
   <a style="color:blue; padding-left:10px" href="https://icepicket.com/" target=_self ><< back</a>
   <p style="color:white; padding-left:10px">reason 1: i like simplicity</p>
   <p style="color:white; padding-left:10px">reason 2: (the actual reason) i'm bad at html and css</p>
