--- a/project/spacebarholdingsimulator.html
+++ b/project/spacebarholdingsimulator.html
@@ -2,6 +2,7 @@
 <div style="background-color:black;">
 <a style="color:blue; padding-left:5px" href="https://icepicket.com/projects" target=_self ><< back</a>
 <h2 style="color:white; padding-left:5px">spacebar holding simulator - <a style="color:white; font-size:125%; background-color:green;" href="download/spacebar_holding_simulator.zip" download><b>download</b></a></h2>
+<p style="color:white; padding-left:5px">Version: 0.1</p>
 <p style="color:white; padding-left:5px">it's an epic game i made in 1 day</p>
 <p style="color:white; padding-left:5px">i don't even know how to compile it so you're gonna have to install python</p>
 <h3 style="color:white; padding-left:5px">trailer</h3>
