--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <br><br>
 <a style="color:darkblue; padding-left:10px" href="project/robuxgeneratorreal" target="_self" title="REAL 100%!!!!11!">robux generator real 100%</a>
 <p style="color:white; padding-left:10px">one day i will put something cooler here</p>
-<p style="color:white; padding-left:10px">This text is here because the owner needs to know if the site changes because of some dns stuff</p>
+<p style="color:gray; padding-left:10px">This text is here because the owner needs to know if the site changes because of some dns stuff</p>
 <br>
 </div>
